add customer flow