@@ -3,13 +3,23 @@ package com.youngstersclub.app.service;
 import com.youngstersclub.app.dto.UserPaymentSummaryDto;
 import com.youngstersclub.app.dto.WhatsappTemplateExecutionRecipientDto;
 import com.youngstersclub.app.dto.WhatsappTemplateExecutionResultDto;
+import com.youngstersclub.app.entity.Branch;
+import com.youngstersclub.app.entity.OrganizationUser;
 import com.youngstersclub.app.entity.User;
 import com.youngstersclub.app.enums.UserRole;
+import com.youngstersclub.app.repository.BranchRepository;
+import com.youngstersclub.app.repository.ConsumableOrderRepository;
+import com.youngstersclub.app.repository.FrameRepository;
+import com.youngstersclub.app.repository.GameActivityOrderRepository;
+import com.youngstersclub.app.repository.KidsPlaySessionRepository;
+import com.youngstersclub.app.repository.OrganizationUserRepository;
 import com.youngstersclub.app.repository.UserRepository;
 import com.youngstersclub.app.util.TimeUtil;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
+import java.util.LinkedHashMap;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -25,17 +35,35 @@ public class PaymentDueReminderExecutor implements WhatsAppTemplateExecutor {
     private static final BigDecimal DUE_THRESHOLD = new BigDecimal("500");
 
     private final UserRepository userRepository;
-    private final UserPaymentSummaryService userPaymentSummaryService;
+    private final OrganizationUserRepository organizationUserRepository;
+    private final BranchRepository branchRepository;
+    private final FrameRepository frameRepository;
+    private final ConsumableOrderRepository consumableOrderRepository;
+    private final KidsPlaySessionRepository kidsPlaySessionRepository;
+    private final GameActivityOrderRepository gameActivityOrderRepository;
+    private final PendingDueService pendingDueService;
     private final WhatsAppService whatsAppService;
     private final BrevoEmailService brevoEmailService;
 
     public PaymentDueReminderExecutor(
             UserRepository userRepository,
-            UserPaymentSummaryService userPaymentSummaryService,
+            OrganizationUserRepository organizationUserRepository,
+            BranchRepository branchRepository,
+            FrameRepository frameRepository,
+            ConsumableOrderRepository consumableOrderRepository,
+            KidsPlaySessionRepository kidsPlaySessionRepository,
+            GameActivityOrderRepository gameActivityOrderRepository,
+            PendingDueService pendingDueService,
             WhatsAppService whatsAppService,
             BrevoEmailService brevoEmailService) {
         this.userRepository = userRepository;
-        this.userPaymentSummaryService = userPaymentSummaryService;
+        this.organizationUserRepository = organizationUserRepository;
+        this.branchRepository = branchRepository;
+        this.frameRepository = frameRepository;
+        this.consumableOrderRepository = consumableOrderRepository;
+        this.kidsPlaySessionRepository = kidsPlaySessionRepository;
+        this.gameActivityOrderRepository = gameActivityOrderRepository;
+        this.pendingDueService = pendingDueService;
         this.whatsAppService = whatsAppService;
         this.brevoEmailService = brevoEmailService;
     }
@@ -48,21 +76,84 @@ public class PaymentDueReminderExecutor implements WhatsAppTemplateExecutor {
     @Override
     public WhatsappTemplateExecutionResultDto execute(boolean isDryRun) {
         LocalDateTime executionTime = TimeUtil.nowIST();
-        List<User> activeCustomers = userRepository.findByRoleAndIsActiveTrue(UserRole.CUSTOMER);
-        List<Integer> userIds = activeCustomers.stream()
-                .map(User::getId)
+        List<OrganizationUser> customerMemberships = organizationUserRepository.findByRoleAndIsActiveTrue(UserRole.CUSTOMER)
+                .stream()
+                .filter(membership -> membership.getUser() != null
+                        && Boolean.TRUE.equals(membership.getUser().getIsActive())
+                        && membership.getOrganization() != null
+                        && Boolean.TRUE.equals(membership.getOrganization().getIsActive()))
                 .toList();
-        Map<Integer, UserPaymentSummaryDto> summariesByUserId = userPaymentSummaryService.getPaymentSummaries(userIds);
 
-        List<WhatsappTemplateExecutionRecipientDto> eligibleRecipients = activeCustomers.stream()
-                .map(user -> new WhatsappTemplateExecutionRecipientDto(
-                        user.getId(),
-                        user.getName(),
-                        user.getPhone(),
-                        summariesByUserId.getOrDefault(user.getId(), new UserPaymentSummaryDto(null, null, null)).getTotalDue()))
-                .filter(recipient -> recipient.getAmount() != null && recipient.getAmount().compareTo(DUE_THRESHOLD) > 0)
+        Map<Long, List<OrganizationUser>> membershipsByOrganizationId = customerMemberships.stream()
+                .collect(Collectors.groupingBy(
+                        membership -> membership.getOrganization().getId(),
+                        LinkedHashMap::new,
+                        Collectors.toList()));
+
+        List<WhatsappTemplateExecutionRecipientDto> eligibleRecipients = new ArrayList<>();
+        int totalCustomersScanned = 0;
+
+        for (Map.Entry<Long, List<OrganizationUser>> entry : membershipsByOrganizationId.entrySet()) {
+            Long organizationId = entry.getKey();
+            List<OrganizationUser> organizationMemberships = entry.getValue();
+            List<Integer> userIds = organizationMemberships.stream()
+                    .map(membership -> membership.getUser().getId())
+                    .distinct()
+                    .toList();
+            if (userIds.isEmpty()) {
+                continue;
+            }
+
+            Map<Integer, BigDecimal> totalDueByUserId = new LinkedHashMap<>();
+            frameRepository.getTotalDueForUsersByOrganization(userIds, organizationId)
+                    .forEach(projection -> totalDueByUserId.merge(
+                            projection.getUserId(),
+                            projection.getAmount() == null ? BigDecimal.ZERO : projection.getAmount(),
+                            BigDecimal::add));
+            consumableOrderRepository.getTotalUnpaidDueByUserIdsAndOrganizationId(userIds, organizationId)
+                    .forEach(projection -> totalDueByUserId.merge(
+                            projection.getUserId(),
+                            projection.getAmount() == null ? BigDecimal.ZERO : projection.getAmount(),
+                            BigDecimal::add));
+            kidsPlaySessionRepository.getTotalUnpaidDueByParentUserIdsAndOrganizationId(userIds, organizationId)
+                    .forEach(projection -> totalDueByUserId.merge(
+                            projection.getUserId(),
+                            projection.getAmount() == null ? BigDecimal.ZERO : projection.getAmount(),
+                            BigDecimal::add));
+            gameActivityOrderRepository.getTotalUnpaidDueByParentUserIdsAndOrganizationId(userIds, organizationId)
+                    .forEach(projection -> totalDueByUserId.merge(
+                            projection.getUserId(),
+                            projection.getAmount() == null ? BigDecimal.ZERO : projection.getAmount(),
+                            BigDecimal::add));
+
+            Map<Long, List<Branch>> branchesByOrganization = Map.of(
+                    organizationId,
+                    branchRepository.findByOrganizationIdAndIsActiveTrueOrderByNameAsc(organizationId));
+            totalCustomersScanned += organizationMemberships.size();
+
+            for (OrganizationUser membership : organizationMemberships) {
+                Integer userId = membership.getUser().getId();
+                BigDecimal totalDue = totalDueByUserId.getOrDefault(userId, BigDecimal.ZERO);
+                if (totalDue.compareTo(DUE_THRESHOLD) <= 0) {
+                    continue;
+                }
+
+                String dueBranchNames = resolveDueBranchNames(userId.longValue(), branchesByOrganization.get(organizationId), membership);
+                eligibleRecipients.add(new WhatsappTemplateExecutionRecipientDto(
+                        userId,
+                        membership.getUser().getName(),
+                        membership.getUser().getPhone(),
+                        totalDue,
+                        null,
+                        membership.getOrganization().getName(),
+                        dueBranchNames,
+                        "TOTAL DUE ABOVE ₹500"));
+            }
+        }
+
+        eligibleRecipients = eligibleRecipients.stream()
                 .sorted((left, right) -> right.getAmount().compareTo(left.getAmount()))
-                .collect(Collectors.toList());
+                .toList();
 
         int successCount = 0;
         int failedCount = 0;
@@ -70,15 +161,16 @@ public class PaymentDueReminderExecutor implements WhatsAppTemplateExecutor {
         log.info(
                 "Payment due reminder job started. Mode: {}. Total customers scanned: {}, eligible customers: {}, skipped: {}",
                 mode,
-                activeCustomers.size(),
+                totalCustomersScanned,
                 eligibleRecipients.size(),
-                Math.max(activeCustomers.size() - eligibleRecipients.size(), 0));
+                Math.max(totalCustomersScanned - eligibleRecipients.size(), 0));
 
         for (WhatsappTemplateExecutionRecipientDto recipient : eligibleRecipients) {
             log.info(
-                    "Payment due reminder eligible customer. userId: {}, name: {}, due: {}",
+                    "Payment due reminder eligible customer. userId: {}, organization: {}, branches: {}, due: {}",
                     recipient.getUserId(),
-                    recipient.getName(),
+                    recipient.getOrganizationName(),
+                    recipient.getBranchName(),
                     recipient.getAmount());
 
             if (isDryRun) {
@@ -102,9 +194,9 @@ public class PaymentDueReminderExecutor implements WhatsAppTemplateExecutor {
                 TEMPLATE_NAME,
                 isDryRun,
                 executionTime,
-                activeCustomers.size(),
+                totalCustomersScanned,
                 eligibleRecipients.size(),
-                Math.max(activeCustomers.size() - eligibleRecipients.size(), 0),
+                Math.max(totalCustomersScanned - eligibleRecipients.size(), 0),
                 successCount,
                 failedCount,
                 new ArrayList<>(eligibleRecipients));
@@ -137,5 +229,23 @@ public class PaymentDueReminderExecutor implements WhatsAppTemplateExecutor {
         } catch (Exception ex) {
             log.error("Payment due reminder summary email failed. Reason: {}", ex.getMessage(), ex);
         }
+    }
+
+    private String resolveDueBranchNames(Long userId, List<Branch> organizationBranches, OrganizationUser membership) {
+        LinkedHashSet<String> dueBranchNames = new LinkedHashSet<>();
+        if (organizationBranches != null) {
+            for (Branch branch : organizationBranches) {
+                if (branch == null || branch.getId() == null) {
+                    continue;
+                }
+                if (pendingDueService.calculateCustomerDue(userId, branch.getId()).totalDue().compareTo(BigDecimal.ZERO) > 0) {
+                    dueBranchNames.add(branch.getName());
+                }
+            }
+        }
+        if (dueBranchNames.isEmpty() && membership.getBaseBranch() != null && membership.getBaseBranch().getName() != null) {
+            dueBranchNames.add(membership.getBaseBranch().getName());
+        }
+        return dueBranchNames.isEmpty() ? "Organization-wide" : String.join(", ", dueBranchNames);
     }
 }
